# pysolver

./: .gitignore  EXPERIMENTS.md  README.md  __abc.py  _aco.py  _problem.py  _pso.py  feedback.py  pyproject.toml  requirements.txt
Docs/: link.txt
examples/: README.md
examples/continuous/: .gitkeep  abc_example.py
examples/static/: test_examples_for_pso.ipynb  tsp_example.py
pysolver/: __abc.py  __init__.py  _aco.py  _pso.py  feedback.py  main.py
