[tool.poetry]
name = "pysolver"
version = "0.1.0"
description = "Nature-inspired optimization algorithms: ACO, ABC, PSO"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
tqdm = "^4.62"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pysolver = "main:main"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", ".git", ".tox", "dist", "build"]

[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report=term-missing"

[tool.isort]
profile = "black" 