[tool.poetry]
name = "pysolver"
version = "0.1.0"
description = "Nature-inspired optimization algorithms: ACO, ABC, PSO"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
matplotlib = "^3.4"
tqdm = "^4.62"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pysolver = "pysolver.main:main"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "black", "flake8"]